Fix scores sorting